[workspace]
members = ["crm", "crm-metadata", "crm-send", "user-stat"]
resolver = "2"


[workspace.dependencies]
anyhow = "1.0.86"
crm-metadata = { path = "crm-metadata" }
crm-send = { path = "crm-send" }
prost = "0.12.6"
prost-build = "0.12.6"
prost-types = "0.12.6"
proto-builder-trait = "0.6.1"
tonic = { version = "0.11.0", features = ["zstd", "tls"] }
tonic-build = "0.11.0"
tokio = { version = "1.38.0", features = ["rt", "rt-multi-thread", "macros"] }
sqlx = { version = "0.7.4", features = [
    "chrono",
    "postgres",
    "runtime-tokio",
    "tls-rustls",
] }
serde = { version = "1.0.204", features = ["derive"] }
chrono = { version = "0.4.38", features = ["serde"] }
serde_yaml = "0.9.34"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
derive_builder = "0.20.0"
futures = "0.3.30"
itertools = "0.13.0"
tokio-stream = "0.1.15"
rand = "0.8.5"
user-stat = { path = "user-stat" }
