[package]
name = "crm-metadata"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
sqlx = { workspace = true }
anyhow = { workspace = true }
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
serde = { workspace = true }
chrono = { workspace = true }
fake = { version = "2.9.2", features = ["derive", "chrono"] }
rand = "0.8.5"
derive_builder = "0.20.0"
futures = "0.3.30"
serde_yaml = { workspace = true }
itertools = "0.13.0"
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tokio-stream = "0.1.15"


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = "0.6.1"
tonic-build = { workspace = true }
