[package]
name = "crm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "server"
path = "src/server.rs"

[[bin]]
name = "client"
path = "src/client.rs"

[dependencies]
anyhow.workspace = true
prost = { workspace = true }
prost-types = { workspace = true }
tokio = { workspace = true }
tonic = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
derive_builder = { workspace = true }
user-stat.workspace = true
crm-metadata.workspace = true
crm-send.workspace = true
serde = { workspace = true }
serde_yaml = { workspace = true }
chrono = { workspace = true }
futures = { workspace = true }
uuid = { version = "1.10.0", features = ["v4"] }
tokio-stream = { workspace = true }
jwt-simple = "0.12.9"


[build-dependencies]
anyhow = { workspace = true }
prost-build = { workspace = true }
proto-builder-trait = { workspace = true }
tonic-build = { workspace = true }
